[package]
name = "rust_snake"
version = "0.1.0"
edition = "2021"
description = "Snake in Rust wasm"
repository = "https://github.com/bogedy/rust_snake"
license = "MIT OR Apache-2.0"
license_file = "LICENSE"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CanvasRenderingContext2d",
    "ImageData"
]
